syntax = "proto3";

package com.grpc.service;

option java_multiple_files = true;
option java_package = "com.grpc.service";

import "google/protobuf/empty.proto";

service SecurityService{
  rpc GetStatusApi(google.protobuf.Empty) returns(KeyApiResponse);
}

message KeyApiResponse{
  bool status = 1;
}